--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -13,6 +13,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2    
     - uses: docker/setup-buildx-action@v1
+    - name: Get owner and repo
+      run: |
+        ownerrepo=${{ github.repository }}
+        owner=$(echo $ownerrepo | cut -f1 -d/)
+        if [[ "$owner" == "iter8-tools" ]]; then
+          owner=iter8
+        fi
+        echo "OWNER=$owner" >> $GITHUB_ENV
+        echo "REPO=$(echo $ownerrepo | cut -f2 -d/)" >> $GITHUB_ENV
     - name: Build and push to /tmp
       uses: docker/build-push-action@v2
       with:
@@ -51,6 +60,15 @@ jobs:
         with:
           minikube version: 'v1.15.1'
           kubernetes version: 'v1.17.11'
+      - name: Get owner and repo
+        run: |
+          ownerrepo=${{ github.repository }}
+          owner=$(echo $ownerrepo | cut -f1 -d/)
+          if [[ "$owner" == "iter8-tools" ]]; then
+            owner=iter8
+          fi
+          echo "OWNER=$owner" >> $GITHUB_ENV
+          echo "REPO=$(echo $ownerrepo | cut -f2 -d/)" >> $GITHUB_ENV
       - name: Test start handler
         run: |
           IMAGE_NAME=${{ env.REPO }}:latest; \
