--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -124,3 +124,23 @@ jobs:
           minikube version: 'v1.15.1'
           kubernetes version: 'v1.17.11'
       - run: kustomize build install | kubectl apply -f -
+
+  # Test quickstart.
+  test-quickstart:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run Kubernetes tools
+        uses: stefanprodan/kube-tools@v1
+        with:
+          kubectl: 1.18.2
+          kustomize: 3.5.5    
+      - name: Setup Minikube
+        uses: manusa/actions-setup-minikube@v2.0.1
+        with:
+          minikube version: 'v1.15.1'
+          kubernetes version: 'v1.17.11'
+      - run: |
+        git clone https://github.com/kubeflow/kfserving.git; \
+        cd kfserving; \
+        ./hack/quick_install.sh
