--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -143,4 +143,4 @@ jobs:
       - run: |
         git clone https://github.com/kubeflow/kfserving.git; \
         cd kfserving; \
-        ./hack/quick_install.sh
+        source ./hack/quick_install.sh
