--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -141,6 +141,6 @@ jobs:
           minikube version: 'v1.15.1'
           kubernetes version: 'v1.17.11'
       - run: |
-        git clone https://github.com/kubeflow/kfserving.git; \
-        cd kfserving; \
-        source ./hack/quick_install.sh
+          git clone https://github.com/kubeflow/kfserving.git
+          cd kfserving
+          source ./hack/quick_install.sh
