--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -6,6 +6,12 @@ on:
     - main # Publish `main` as Docker `latest` image.
   pull_request: # Run tests for any PRs.
 
+# environment variables available to all jobs in this workflow
+env:
+  IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
+  IBM_CLOUD_REGION: us-south
+  IKS_CLUSTER: iter8
+
 jobs:
   # Build a local Docker image.
   local-docker-build:
@@ -124,3 +130,37 @@ jobs:
           minikube version: 'v1.15.1'
           kubernetes version: 'v1.17.11'
       - run: kustomize build install | kubectl apply -f -
+
+  # Test quickstart
+  test-quickstart-on-iks:
+    name: Test quickstart on IKS cluster
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Download and Install IBM Cloud CLI
+    - name: Install IBM Cloud CLI
+      run: |
+        curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
+        ibmcloud --version
+        ibmcloud config --check-version=false
+        ibmcloud plugin install -f kubernetes-service
+        ibmcloud plugin install -f container-registry
+
+    # Authenticate with IBM Cloud CLI
+    - name: Authenticate with IBM Cloud CLI
+      run: ibmcloud login --apikey "${IBM_CLOUD_API_KEY}" -r "${IBM_CLOUD_REGION}" -g default
+
+    # Install iter8-kfserving on IKS
+    - name: Install iter8-kfserving on IKS
+      run: |
+        # set kubectl context
+        ibmcloud ks cluster config --cluster $IKS_CLUSTER
+        kubectl config current-context
+        # install kfserving
+        git clone --branch v0.4.1 https://github.com/kubeflow/kfserving.git
+        cd kfserving
+        eval ./hack/quick_install.sh
+
