Test quickstart on iks

--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -135,7 +135,7 @@ jobs:
   test-quickstart-on-iks:
     name: Test quickstart on IKS cluster
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
     steps:
     - name: Checkout
       uses: actions/checkout@v2
